// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CellText> renders as expected 1`] = `
<div
  className="cell cell--2 cell--text cell__character"
>
  ma
  <span
    className="cell__character--jiutai"
  />
  <span
    className="cell__tooltip cell__tooltip--centered"
  >
    jiutai
  </span>
  <span
    className="cell__range--low"
  />
</div>
`;

exports[`<CellText> renders as expected 2`] = `
<div
  className="cell cell--2 cell--text cell__character"
>
  <span
    className="truncate"
  >
    ma
  </span>
  <span
    className="cell__character--jiutai"
  />
  <span
    className="cell__tooltip"
  >
    jiutai
  </span>
  <span
    className="cell__range--medium"
  />
</div>
`;

exports[`<CellText> renders as expected 3`] = `
<div
  className="cell cell--2 cell--text cell__character"
>
  ma
  <span
    className="cell__character--jiutai"
  />
  <span
    className="cell__tooltip cell__tooltip--centered"
  >
    jiutai
  </span>
  <span
    className="cell__range--high"
  />
</div>
`;

exports[`<CellText> renders as expected with no vocal range 1`] = `
<div
  className="cell cell--2 cell--text cell__character"
>
  ma
  <span
    className="cell__character--jiutai"
  />
  <span
    className="cell__tooltip cell__tooltip--centered"
  >
    jiutai
  </span>
</div>
`;
